deploy/kubernetes/frontend-service.yaml
{
  "apiVersion": "v1",
  "kind": "Service",
  "metadata": {
    "name": "frontend",
    "annotations": {
      "traefik.ingress.kubernetes.io/service.nativelb": "true"
    }
  },
  "spec": {
    "type": "ClusterIP",
    "selector": {
      "app": "frontend"
    },
    "ports": [
      {
        "name": "http",
        "port": 8080,
        "targetPort": 8080
      }
    ]
  }
}
