deploy/kubernetes/local-ingress-service.yaml
{
  "apiVersion": "v1",
  "kind": "Service",
  "metadata": {
    "name": "local-ingress"
  },
  "spec": {
    "type": "ClusterIP",
    "selector": {
      "app": "local-ingress"
    },
    "ports": [
      {
        "name": "https",
        "port": 8443,
        "targetPort": 8443
      }
    ]
  }
}
